# PyFrag

./: .gitignore  .pyfragrc  .readthedocs.yaml  .travis.yml  2023  CHANGELOG.md  CITATION.cff  CLEANUP_RECOMMENDATIONS.md  LICENSE  LICENSE.md  PyFrag.code-workspace  README.md  README.rst  SMP.md  deploy_on_cluster.sh  install_alone.sh  install_host.sh  install_local.sh  pyfrag.enw  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_ori.py  test.txt
.github/workflows/: build_docs.yaml  ci.yml  perform_tests.yaml  publish.yml
data/qmworks/components/: operations.py
data/result/stocks/: PYFRAG.csv  change.py  main.py  main_1.py  pyfrag.py  theme.yaml
data/video/: pre_index.html  video_index.html
data/video/csv2html/: index.html
docs/: Doxyfile  Further_reading.ipynb  Further_reading.rst  Makefile  app.rst  conf.py  documentation.rst  exerciseforPyFrag.docx  includeme.rst  index.rst  install.rst  install_old.rst  interactive_tutorial.ipynb  interactive_tutorial.rst  interactive_tutorial_1.ipynb  local_machine.rst  make.bat  molkit.rst  pyfragparameter.rst  remote_machine.ipynb  remote_machine.rst  settings.rst  specialcalculation.rst  standalone.rst  standalone_later.rst  templates.rst
docs/source/: conf.py
example/PyFrag2025/Charged/: PES1Dist57Angle80.in
example/PyFrag2025/Irreps/: symmetry_job.in
example/PyFrag2025/Methane/: adfinputfile  complex_EXTRA  fragment1_EXTRA  fragment2_EXTRA  methane.err  methane.out  new_ams_methane.in  sub
example/PyFrag2025/Palladium/: old_adf_job.in
example/PyFrag2025/WithBasisRegions/: job_regions.in
example/PyFrag2025/WithLibgen/: coord.xyz  si-icf.in
example/PyFrag2025/WithSymmetry/: symmetry_job.in
example/open-shell/: methane.amv  new_ams_methane.in
example/regular_job/: molecule.xyz  new_ams_job.in  new_ams_job.run  pyfrag_new_ams_job.in
example/restricted/: molecule.xyz  new_ams_job.in
example/restricted/developer_test_charged/: PES1Dist57Angle80.in  PES1normdist57ang80.ams.amv
example/restricted/developer_test_irreps/: nh3_bh3.xyz
example/restricted/developer_test_symmetry/: symmetry_job.in
examples/PyFrag2025/Charged/: PES1Dist57Angle80.in
examples/PyFrag2025/Cluster/: prod5_8.amv
examples/PyFrag2025/Gaussian/: Ethylene-forward.out  input.com
examples/PyFrag2025/Irreps/: pyfrag_symmetry_job.txt  symmetry_job.in
examples/PyFrag2025/Methane/: new_ams_methane.in
examples/PyFrag2025/Orca/: input.inp
examples/PyFrag2025/Palladium/: new_ams_job.in
examples/PyFrag2025/Surface/: Pyfrag_Mn_H
examples/PyFrag2025/Turbomole/: input.inp
examples/PyFrag2025/WithBasisRegions/: job_regions.in  mol_trajectory.xyz
examples/PyFrag2025/WithSymmetry/: molecule.xyz
host/: .pyfragrc  adf_to_ams_input_converter.py  job.py  job_1.py  test.py  test.xyz  test_1.xyz
host/argueparce/: argueparce.sh  coorargue.py
host/result/: change.sh  killjob.sh  result.sh
host/standalone/adf_new/: PyFrag.py  PyFragModules.py  errors.py  input.py  mol_handling.py  pyfragparce.sh  result_classes.py
host/standalone/adf_newopen/: DEPRECATED.md  PyFrag.py  PyFragModules.py  pyfragparce.sh
host/standalone/adf_old/: PyFragModules.py  pyfrag.py  pyfragparce.sh
host/standalone/adf_open/: PyFrag.py  PyFragModules.py  pyfragparce.sh
host/standalone/adf_openorb/: PyFrag.py  PyFragModules.py  pyfragparce.sh
host/standalone/adf_single/: PyFrag.py  PyFragModules.py  pyfragparce.sh
host/standalone/gaussian/: pyfrag.py
host_old/result/: killjob.sh  result.sh
jupyterNotebooks/: Further_reading.ipynb  interactive_tutorial.ipynb
jupyterNotebooks/.ipynb_checkpoints/: interactive_tutorial-checkpoint.ipynb
jupyterNotebooks/pyfrag/result/: .test_guirc  ircconverge.txt  ircgeometry.xyz  pconverge.txt  pgeometry.xyz  r2converge.txt  rcconverge.txt  tsconverge.txt
process/: adfpicture.tcl  figure.sh  img2video.py  test.sh  test.tcl
qmworks/: __init__.py  molkit.py  settings.py  utils.py
qmworks/components/: fde.py  reactivity.py
qmworks/data/templates/: complex.json  complex.json_1  fragment.json_1  freq.json  geometry.json  irc.json  singlepoint.json  singlepoint.json_1  ts.json
qmworks/data/templates_ori/: fragment.json  irc.json
qmworks/parsers/: adf_parser.py  orca_parser.py  parser.py  xyzParser.py
qmworks/plams/: plams_defaults
qmworks/plams/tools/: kftools.py
qmworks/templates/: __init__.py  templates.py  templates_ori.py
qmworks_old/data/dictionaries/: generic2ADF_new.json
qmworks_old/data/templates/: ts.json
server/: bokeh.sh  converge.py  geotable.py  geotable_ts.py  pyfragtable.py  web.sh
server/qmworks/components/: reactivity.py
server/stocks/: change.py  pyfrag.py
src/PyFrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyfrag/: __init__.py  cluster_runner.py  config.py  enums.py  errors.py  main.py  main_parser.py  main_program.py  parser_factory.py  pyfrag  pyfrag.sh  venv_runner.sh  version.py
standalone/adf/: kffile.py  pfm.py
standalone/excel/: fragment_energies.txt
standalone/gaussian/: Ethylene-forward.amv  input.com  pyfrag.py  sub
standalone/orca/: irc.amv  sub
standalone/turbomole/: fragment_energies.txt  sub
test/: README.rst  README_1.rst  job.in  test_demo1.py
test/allure-report/: 4377a533-1a70-4289-b71d-c9835aa3e55b-result.json  60bddfab-4848-4988-89cf-532a5e63b1f7-result.json  98992eb0-50b1-4d83-adac-d308f0f32436-result.json  f727148f-ec3b-4c0f-a8cb-d5d751044a16-result.json  fbd1710b-1f86-4fae-80e1-fdc7c0991cd5-result.json
test/pytest/: test_demo1.py
tests/: test_determine_calc_type.py  test_extract_sections.py  test_fragment.py  test_input_blocks_class.py  test_molecule_fragmentation.py  test_read_coordfile.py  test_read_pyfrag_section.py
tests/ADF/: test_expandvars_and_wildcard.py  test_input.py  test_mol_handling.py
utils/: buttons.scpt  configure.py
utils/chresult/: fabfile.py
utils/jobsub/: fabfile.py
utils/resub/: fabfile.py
utils/resub_simple/: fabfile.py
utils/summary/: bokeh.sh  fabfile.py
utils/termjob/: fabfile.py
utils/test/: fabfile.py  haha.sh  test.sh  test_1.scpt
(+241 files in other folders)
