[project]
name = "PyFrag"
authors = [
    { name = "X. Sun" },
    { name = "J. Poater" },
    { name = "T. A. Hamlin" },
    { name = "F. M. Bickelhaupt" },
    { name = "S.J. Lekanne Deprez", email = "s.j.lekanne.deprez@vu.nl" },
]
description = "Automation of fragment calculations of the AMS package in quantum chemistry"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dynamic = ["version"]
license = "LGPL-3.0"
dependencies = [
    "numpy>=1.20.0",
    "gitpython>=3.1.24",
    "attrs>=21.2.0",
    "plams>=2024.107",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/TheoChem-VU/PyFrag"

[project.scripts]
# Console scripts for PyFrag
pyfrag = "pyfrag.main:main"

[tool.setuptools]
# Install shell scripts as executable files
script-files = ["src/pyfrag/pyfrag.sh"]

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
    "pyfrag*",
] # package names should match these glob patterns (["*"] by default)
exclude = [
    "tests*",
    "docs*",
] # exclude packages matching these glob patterns (empty by default)

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.dynamic]
version = { attr = "pyfrag.__version__" }

[tool.pytest.ini_options]
pythonpath = "src/pyfrag/host/standalone/adf_new"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "sphinx>=5.3.0",
]
