[project]
name = "PyFrag"
authors = [
    { name = "X. Sun" },
    { name = "J. Poater" },
    { name = "T. A. Hamlin" },
    { name = "F. M. Bickelhaupt" },
    { name = "S.J. Lekanne Deprez", email = "s.j.lekanne.deprez@vu.nl" },
]
description = "Automation of fragment calculations of the AMS package in quantum chemistry"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dynamic = ["version"]
license = "LGPL-3.0"
dependencies = ["numpy>=1.20.0", "plams>=2024.107"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/TheoChem-VU/PyFrag"

[project.scripts]
# Console scripts for PyFrag
pyfrag = "pyfrag.main:main"

[tool.pytest.ini_options]
pythonpath = "src/pyfrag/host/standalone/adf_new"

[build-system]
requires = ["hatchling>=1.26", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfrag"]

# See https://pydevtools.com/handbook/how-to/how-to-add-dynamic-versioning-to-uv-projects/
[tool.hatch.version]
source = "uv-dynamic-versioning"

# [tool.uv-dynamic-versioning]
# fallback-version = "2025.101"

[dependency-groups]
dev = ["pytest>=7.4.4", "sphinx>=5.3.0"]
