# see: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = PyFrag
author =
    S.J. Lekanne Deprez
    X. Sun
    J. Poater
    T. A. Hamlin
    F. M. Bickelhaupt
author_email = s.j.lekanne.deprez@vu.nl
description = Automation of fragment calculations of the AMS package in quantum chemistry
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Development/Alpha
    Topic :: Scientific/Engineering :: Chemistry
dynamic = ["version"]
license = LGPL-3.0


[tool.setuptools-git-versioning]
enabled = true
template = {tag}
dev_template = {tag}
dirty_template = {tag}

# [options.entry_points]
# console_scripts =
#     pyfrag = pyfrag.main:main

[options]
package_dir=
    =src
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    importlib-metadata; python_version > "3.10"
    numpy>=1.20.0
    gitpython>=3.1.24
    git+https://github.com/SCM-NV/PLAMS.git@c824303959950742a052f48ff1ac1cd4a33cc637
    attrs>=21.2.0
    pandas>=1.4.0
    tabulate>=0.8.9

[options.packages.find]
where=src
exclude =
    /tests*
    /docs*

[options.extras_require]
dev =
    pytest
    sphinx
